fix: remove extra whitespace for articles starting with a blockquote
* also prohibit making text bold in blockquotes, it's already black.
* test article: /articles/2015-12-15-thatcherites-of-the-world-unite/

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2198,12 +2198,12 @@ unless a heading is the very first element in the post content */
 }
 
 /* A larger margin before/after dividers, blockquotes and embeds */
-.gh-content > :is(hr, blockquote, iframe) {
+.gh-content > :is(hr, blockquote, iframe):not(:first-child) {
     position: relative;
     margin-top: calc(48px * var(--content-spacing-factor, 1)) !important;
 }
 
-.gh-content > :is(hr, blockquote, iframe) + * {
+.gh-content > :is(hr, blockquote, iframe):not(:first-child) + * {
     margin-top: calc(48px * var(--content-spacing-factor, 1)) !important;
 }
 
@@ -2448,6 +2448,10 @@ blockquote.kg-blockquote-alt:before {
 blockquote.kg-blockquote-alt {
     font-style: normal;
     text-align: left;
+}
+
+blockquote strong {
+    font-weight: inherit;
 }
 
 /* Button */
